WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143147
[Mac] Safari fails to fire page "load" event with video[preload=none]
https://bugs.webkit.org/show_bug.cgi?id=143147
Summary
[Mac] Safari fails to fire page "load" event with video[preload=none]
Jer Noble
Reported
2015-03-27 13:15:47 PDT
[Mac] Safari fails to fire page "load" event with video[preload=none]
Attachments
Patch
(12.39 KB, patch)
2015-03-27 13:20 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-03-27 13:16:44 PDT
rdar://problem/20038844
Jer Noble
Comment 2
2015-03-27 13:20:59 PDT
Created
attachment 249602
[details]
Patch
WebKit Commit Bot
Comment 3
2015-03-27 14:33:23 PDT
Comment on
attachment 249602
[details]
Patch Clearing flags on attachment: 249602 Committed
r182081
: <
http://trac.webkit.org/changeset/182081
>
WebKit Commit Bot
Comment 4
2015-03-27 14:33:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug